--- a/Tesla-Solar-Roof-Calculator/index.html
+++ b/Tesla-Solar-Roof-Calculator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Tesla Solar Roof Calculator</title>
   </head>
   <body>
@@ -129,7 +129,7 @@
               class="annual-kwh-input"
               id="annual-kwh-input"
               name="Annual kWh"
-              type="text"
+              type="number"
               required
             />
           </section>
@@ -266,6 +266,6 @@
       </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
