--- a/Tesla-Solar-Roof-Calculator/index.html
+++ b/Tesla-Solar-Roof-Calculator/index.html
@@ -13,7 +13,7 @@
       <!-- Solar Roof Data Inputs -->
       <form
         id="tesla-form"
-        action="https://formsubmit.co/ron@creatiquemedia.com"
+        action="https://formsubmit.co/mailto:bryan@elliottroofs.com"
         method="POST"
       >
         <section class="calc-form-section-1">
@@ -37,14 +37,14 @@
               required
             />
             <label for="phone-number" class="phone-number">
-              Phone Number (555-555-5555)*
+              Phone Number*
             </label>
             <input
               type="tel"
               class="phone-number"
               id="phone-number-input"
               name="Phone Number"
-              pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+              pattern="[0-9]{3}[0-9]{3}[0-9]{4}"
               required
             />
             <label class="email-label" for="email">Email*</label>
@@ -146,6 +146,8 @@
             <label class="roof-complexity-label" for="roof-complexity"
               >Roof Complexity Type*</label
             >
+
+            <img src="https://i.ibb.co/QNxTqyZ/Roof-Complexity-Type.png" alt="Roof-Complexity-Type" border="0">
             <select id="roof-complexity-input" name="Roof Complexity Type">
               <option selected disabled hidden>Select an Option</option>
               <option id="simple" value="simple">Simple</option>
@@ -264,6 +266,7 @@
           required
         />
       </section>
+    </main>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
