Updated: Dollar Signs

--- a/Tesla-Solar-Roof-Calculator/index.html
+++ b/Tesla-Solar-Roof-Calculator/index.html
@@ -23,7 +23,7 @@
             </label>
             <input
               type="text"
-              class="first-name-input"
+              class="input"
               name="First Name"
               required
             />
@@ -32,7 +32,7 @@
             </label>
             <input
               type="text"
-              class="last-name-input"
+              class="input"
               name="Last Name"
               required
             />
@@ -48,7 +48,7 @@
               required
             />
             <label class="email-label" for="email">Email*</label>
-            <input type="email" class="email" name="Email" required />
+            <input type="email" class="input" name="Email" required />
           </section>
 
           <!-- Address Section -->
@@ -100,7 +100,7 @@
               >Total Home Square Footage*</label
             >
             <input
-              class="total-home-sqft-input"
+              class="input"
               id="total-home-sqft-input"
               name="Total Home Sqft"
               type="number"
@@ -113,7 +113,7 @@
               >Calculated Roof Square Footage*</label
             >
             <input
-              class="calculated-roof-sqft-input"
+              class="input"
               id="calculated-roof-sqft-input"
               name="Calculated Roof Sqft"
               type="number"
@@ -126,7 +126,7 @@
               >Total Annual Kilowatt Hours (kWh) Found on Utility Bill*</label
             >
             <input
-              class="annual-kwh-input"
+              class="input"
               id="annual-kwh-input"
               name="Annual kWh"
               type="number"
@@ -138,7 +138,7 @@
             <label class="calculate-kw-label" for="calculated-kw"
               >Calculated Kilowatts (kW)</label
             >
-            <input class="calculated-kw-input" id="calculated-kw-input"
+            <input class="input" id="calculated-kw-input"
             name="Calcualted kW" type="text" value-" " required />
           </section>
 
@@ -147,8 +147,8 @@
               >Roof Complexity Type*</label
             >
 
-            <img src="https://i.ibb.co/QNxTqyZ/Roof-Complexity-Type.png" alt="Roof-Complexity-Type" border="0">
-            <select id="roof-complexity-input" name="Roof Complexity Type">
+            <a href="https://ibb.co/B6PG1Xb"><img src="https://i.ibb.co/FYWXPS2/Roof-Complexity-Type.png" alt="Roof-Complexity-Type" border="0"></a>
+            <select id="roof-complexity-type" name="Roof Complexity Type">
               <option selected disabled hidden>Select an Option</option>
               <option id="simple" value="simple">Simple</option>
               <option id="moderate" value="moderate">Moderate</option>
@@ -161,7 +161,7 @@
 
             <input
               type="text"
-              class="system-size-input"
+              class="input"
               id="system-size-input"
               value="4.0"
               name="System Size"
@@ -180,7 +180,7 @@
             </button>
             <input
               type="text"
-              class="powerwall-battery-input"
+              class="input"
               id="powerwall-battery-input"
               name="Powerwall Battery"
               value="0"
@@ -205,7 +205,7 @@
             <input
               type="text"
               class="input"
-              id="roof-price-before-itc"
+              id="roof-price-before-itc-input"
               name="Roof Price Before ITC"
               required
             />
@@ -218,7 +218,7 @@
             <input
               type="text"
               class="input"
-              id="powerwall-price-before-itc"
+              id="powerwall-price-before-itc-input"
               name="Powerwall Price Before ITC"
               value="0"
               required
@@ -230,7 +230,7 @@
             <input
               type="text"
               class="input"
-              id="est-total-before-itc"
+              id="est-total-before-itc-input"
               name="Estimated Total Before ITC"
               required
             />
@@ -241,7 +241,7 @@
             <input
               type="text"
               class="input"
-              id="est-itc"
+              id="est-itc-input"
               name="Estimated ITC"
               required
             />
@@ -249,7 +249,7 @@
             <label class="total-cost-label" for="total-cost">Total Cost</label>
             <input
               type="text"
-              class="total-cost-input"
+              class="input"
               id="total-cost-input"
               name="Total Cost"
               required
